# video-management-assistant

./: .gitattributes  .gitignore  AGENT_INSTALL.md  Build-Release.ps1  DEVELOPMENT.md  DISTRIBUTION.md  Generate-VideoProject.ps1  ICON_OPTIONS.md  LICENSE  MAC_INSTALL.md  PROJECT.md  README.md  index.html  package-lock.json  package.json  template.json  vite.config.ts  启动目录生成器.cmd
.github/: RELEASE_NOTES.md
.github/workflows/: release.yml
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
