[package]
name = "video-management-assistant"
version = "1.0.0"
description = "Create a standard video project folder tree"
authors = ["一艺之间"]
edition = "2021"

[lib]
name = "video_management_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"

[dev-dependencies]
tempfile = "3"

[profile.dev]
debug = 0
incremental = false

[profile.test]
debug = 0
incremental = false
